
Apache Solr integration x.x-x.x, xxxx-xx-xx
------------------------------

Apache Solr integration 6.x-2.x, xxxx-xx-xx
------------------------------
#1224748 by pwolanin, David Lesieur: fix nodeapi params.
REVERTED: #549664 by Scott Reynolds Ignore node_access for Solr Views queries.
#761990 by pwolanin, jhedstrom: 400 Bad Status if URL length limit exceeded.
#1173696 by arekanderu, jpmckinney: Fix apachesolr_nodeapi_mass_delete and apachesolr_nodeapi_mass_update.

Apache Solr integration 6.x-2.0-beta4, 2011-05-26
------------------------------
#1163520 by jpmckinney: some documents getting missed by indexer.
#1165932 by Ravi.J, jpmckinney: Uncaught exception on MLT block.
#1098860 by jpmckinney: Add apachesolr_cron_check_node_table back to cron.
#881760 by pwolanin: account for http://drupal.org/node/345591
#1141046 by craig_, pwolanin, jpmckinney: Highlight field not used, when setting variable apachesolr_hl_highlight.
#1146054 by pwolanin: Remove unneded & (reference) operators for objects.
#1104456 by jpmckinney, jhedstrom: For show more/fewer links, appendTo .content, instead of to the block itself.
#675262 by kcoop: HTML entities erroneously generated for author names.
#920880 by jpmckinney, mihha: facet_block_callback not propagated.
#783366 by jpmckinney, pwolanin, elliotttf: Synchronize apachesolr_search_browse with apachesolr_search_execute.
#614644 by jpmckinney, pwolanin: Forms attached to Apachesolr search results won't work.
#509982 by jpmckinney: Is our use of menu_alter incompatible with fallback to core search?
#871440 by jpmckinney, elliotttf: Solr taxonomy page displays search form and blocks when the user has no access.
#899590 by jpmckinney, elliotttf: Support indexing of CCK fields that are not facets.
#993476 by jpmckinney, pwolanin: allow arbitrary results per page in the 0-200 range.
#903802 by jpmckinney: BLOCK_CACHE_PER_PAGE conflicts with theme_apachesolr_facet_list.
#882638 by pwolanin, jpmckinney: Clean the text inside indexed tags.