@@ -6,13 +6,10 @@
  */
 
 class DrupalSolrMatchTestCase extends DrupalWebTestCase {
-  /**
-   * Implementation of getInfo().
-   */
-  function getInfo() {
+  public static function getInfo() {
     return array(
-      'name' => t('Solr Index Queries'),
-      'description' => t('Indexes content and queries it.'),
+      'name' => 'Solr Index Queries',
+      'description' => 'Indexes content and queries it.',
       'group' => 'ApacheSolr',
     );
   }
