@@ -4,6 +4,7 @@ Apache Solr integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr integration 6.x-2.x, xxxx-xx-xx
 ------------------------------
+#1248366 by Dave Reid: Fix declaration of getInfo() test functions.
 #1224748 by pwolanin, David Lesieur: fix nodeapi params.
 REVERTED: #549664 by Scott Reynolds Ignore node_access for Solr Views queries.
 #761990 by pwolanin, jhedstrom: 400 Bad Status if URL length limit exceeded.
